--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="bacground">
         <div class="blur">
           <form
-            action="index2.html"
+            action="https://pinbeetle.github.io/Project-2/"
             method="get"
             autocomplete="on"
             target="_blank"
